--- a/face_alignment.ipynb
+++ b/face_alignment.ipynb
@@ -2,48 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from datetime import datetime\n",
-    "from time import time\n",
-    "import cv2\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "import pickle\n",
-    "from scipy.spatial.distance import cosine\n",
-    "from mtcnn import MTCNN\n",
-    "from keras_vggface.vggface import VGGFace\n",
-    "from keras_vggface.utils import preprocess_input\n"
+    "import face_alignment\n",
+    "from skimage import io\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'Path' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-3c38df69c950>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# BASE_DIR = Path.cwd().\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mDRIVE_NAME\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"F:\\\\\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mDATA_DIR\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDRIVE_NAME\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoinpath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mIMAGE_DIR\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDATA_DIR\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoinpath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'images'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mDUMP_DIR\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDATA_DIR\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoinpath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'dump'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Path' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import collections\n",
+    "from dataclasses import dataclass\n",
+    "matplotlib.rcParams['figure.dpi'] = 300\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# BASE_DIR = Path(__file__).parent.parent\n",
     "# BASE_DIR = Path.cwd().\n",
@@ -52,52 +38,159 @@
     "IMAGE_DIR = DATA_DIR.joinpath('images')\n",
     "DUMP_DIR = DATA_DIR.joinpath('dump')\n",
     "MODEL_DIR = DATA_DIR.joinpath('models')\n",
-    "# for c in DATA_DIR.iterdir(): print(c)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inputs: [<tf.Tensor 'input_4:0' shape=(None, 224, 224, 3) dtype=float32>]\n",
-      "Outputs: [<tf.Tensor 'global_average_pooling2d_17/Mean:0' shape=(None, 2048) dtype=float32>]\n"
-     ]
-    }
-   ],
-   "source": [
-    "mtcnn_face_detector = MTCNN()\n",
-    "# vgg_embedding_extractor = VGGFace(model='resnet50', include_top=False, input_shape=(224, 224, 3), pooling='avg')\n",
-    "vgg_embedding_extractor = VGGFace(model='senet50', include_top=False, input_shape=(224, 224, 3), pooling='avg')\n",
-    "print('Inputs: %s' % vgg_embedding_extractor.inputs)\n",
-    "print('Outputs: %s' % vgg_embedding_extractor.outputs)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "InvalidImage",
-     "evalue": "Image not valid.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInvalidImage\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-aa70c31c919f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;31m#     print(image.shape)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m     \u001b[0mfaces\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmtcnn_face_detector\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetect_faces\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;31m#     print(len(faces))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[0mface_index\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mF:\\Miniconda3\\envs\\idol_env\\lib\\site-packages\\mtcnn\\mtcnn.py\u001b[0m in \u001b[0;36mdetect_faces\u001b[1;34m(self, img)\u001b[0m\n\u001b[0;32m    285\u001b[0m         \"\"\"\n\u001b[0;32m    286\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mimg\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"shape\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 287\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mInvalidImage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Image not valid.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    288\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    289\u001b[0m         \u001b[0mheight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mInvalidImage\u001b[0m: Image not valid."
-     ]
-    }
-   ],
-   "source": [
+    "# for c in DATA_DIR.iterdir(): print(c)\n",
+    "\n",
     "test_dir = IMAGE_DIR.joinpath('2010-09-27')\n",
     "\n",
+    "fa = face_alignment.FaceAlignment(\n",
+    "    face_alignment.LandmarksType._3D,\n",
+    "    face_detector='sfd',\n",
+    "    flip_input=False,\n",
+    "    device='cpu',\n",
+    ")\n",
+    "\n",
+    "@dataclass\n",
+    "class Predtype:\n",
+    "    list_slice: slice\n",
+    "    color: tuple\n",
+    "\n",
+    "pred_types = {\n",
+    "    'face': Predtype(slice(0, 17), (0.682, 0.780, 0.909, 0.5)),\n",
+    "    'eyebrow1': Predtype(slice(17, 22), (1.0, 0.498, 0.055, 0.4)),\n",
+    "    'eyebrow2': Predtype(slice(22, 27), (1.0, 0.498, 0.055, 0.4)),\n",
+    "    'nose': Predtype(slice(27, 31), (0.345, 0.239, 0.443, 0.4)),\n",
+    "    'nostril': Predtype(slice(31, 36), (0.345, 0.239, 0.443, 0.4)),\n",
+    "    'eye1': Predtype(slice(36, 42), (0.596, 0.875, 0.541, 0.3)),\n",
+    "    'eye2': Predtype(slice(42, 48), (0.596, 0.875, 0.541, 0.3)),\n",
+    "    'lips': Predtype(slice(48, 60), (0.596, 0.875, 0.541, 0.3)),\n",
+    "    'teeth': Predtype(slice(60, 68), (0.596, 0.875, 0.541, 0.4))\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_preds = fa.get_landmarks_from_directory(str(test_dir))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2D-Plot\n",
+    "plot_style = dict(\n",
+    "    marker='.',\n",
+    "    markersize=1,\n",
+    "    linestyle='none',\n",
+    "    # linewidth=2,\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for img_path, faces in img_preds.items():\n",
+    "    # print(img_path)\n",
+    "    # print(len(value))\n",
+    "    # print(\"\\n\")\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_axes([0, 0, 1, 1])\n",
+    "    ax.imshow(io.imread(img_path))\n",
+    "    ax.axis('off')\n",
+    "    for index, face in enumerate(faces):\n",
+    "        # ax = fig.add_subplot(1, len(faces), index + 1)\n",
+    "        for pred_type in pred_types.values():\n",
+    "            # print(pred)\n",
+    "            # print(type(pred))\n",
+    "            \n",
+    "            ax.plot(\n",
+    "                face[pred_type.list_slice, 0],\n",
+    "                face[pred_type.list_slice, 1],\n",
+    "                color=pred_type.color,\n",
+    "                **plot_style,\n",
+    "            )\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3D-Plot\n",
+    "\n",
+    "for img_path, faces in img_preds.items():\n",
+    "    # print(img_path)\n",
+    "    # print(len(value))\n",
+    "    # print(\"\\n\")\n",
+    "\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_axes([0, 0, 1, 1], projection='3d')\n",
+    "    # ax.imshow(io.imread(img_path))\n",
+    "    # ax.axis('off')\n",
+    "    for index, face in enumerate(faces):\n",
+    "        # ax = fig.add_subplot(1, len(faces), index + 1)\n",
+    "        surf = ax.scatter(\n",
+    "            face[:, 0] * 1.2,\n",
+    "            face[:, 1],\n",
+    "            face[:, 2],\n",
+    "            c='cyan',\n",
+    "            alpha=1.0,\n",
+    "            edgecolor='b',\n",
+    "        )\n",
+    "        for pred_type in pred_types.values():\n",
+    "            # print(pred)\n",
+    "            # print(type(pred))\n",
+    "            ax.plot3D(\n",
+    "                face[pred_type.list_slice, 0] * 1.2,\n",
+    "                face[pred_type.list_slice, 1],\n",
+    "                face[pred_type.list_slice, 2],\n",
+    "                color='blue',\n",
+    "            )\n",
+    "        ax.view_init(elev=45., azim=45.)\n",
+    "        ax.set_xlim(ax.get_xlim()[::-1])\n",
+    "        plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
+    "# surf = ax.scatter(face[:, 0] * 1.2,\n",
+    "#                   face[:, 1],\n",
+    "#                   face[:, 2],\n",
+    "#                   c='cyan',\n",
+    "#                   alpha=1.0,\n",
+    "#                   edgecolor='b',\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "# for pred_type in pred_types.values():\n",
+    "#     ax.plot3D(face[pred_type.slice, 0] * 1.2,\n",
+    "#               face[pred_type.slice, 1],\n",
+    "#               face[pred_type.slice, 2], color='blue')\n",
+    "\n",
+    "# ax.view_init(elev=90., azim=90.)\n",
+    "# ax.set_xlim(ax.get_xlim()[::-1])\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OLD BOUNDING BOX THINGS\n",
     "images_list = []\n",
     "\n",
     "embeddings_list = []\n",
