finish basic workflow with dataframe integration

--- a/face_alignment.ipynb
+++ b/face_alignment.ipynb
@@ -3,12 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "from dataclasses import dataclass\n",
+    "import math\n",
+    "\n",
     "import face_alignment\n",
-    "from skimage import io\n"
+    "from skimage import io\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import matplotlib.patches as patches\n",
+    "matplotlib.rcParams['figure.dpi'] = 300\n",
+    "import cv2\n",
+    "from keras_vggface.vggface import VGGFace\n",
+    "from keras_vggface.utils import preprocess_input\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -17,18 +32,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import collections\n",
-    "from dataclasses import dataclass\n",
-    "matplotlib.rcParams['figure.dpi'] = 300\n"
+    "# from importlib import reload\n",
+    "# reload(face_alignment)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# BASE_DIR = Path(__file__).parent.parent\n",
@@ -38,17 +51,41 @@
     "IMAGE_DIR = DATA_DIR.joinpath('images')\n",
     "DUMP_DIR = DATA_DIR.joinpath('dump')\n",
     "MODEL_DIR = DATA_DIR.joinpath('models')\n",
+    "TEST_DIR = DATA_DIR.joinpath('test')\n",
     "# for c in DATA_DIR.iterdir(): print(c)\n",
+    "# test_dir = IMAGE_DIR.joinpath('2020-08-17')\n",
+    "# test_dir = IMAGE_DIR.joinpath('2020-06-25')\n",
+    "# test_dir = IMAGE_DIR.joinpath('2012-06-11')\n",
     "\n",
-    "test_dir = IMAGE_DIR.joinpath('2010-09-27')\n",
+    "class FaceDetection:\n",
+    "    w_1: int\n",
+    "    h_1: int\n",
+    "    w_2: int\n",
+    "    h_2: int\n",
+    "        \n",
+    "    side_length: int\n",
+    "    confidence: float\n",
     "\n",
-    "fa = face_alignment.FaceAlignment(\n",
-    "    face_alignment.LandmarksType._3D,\n",
-    "    face_detector='sfd',\n",
-    "    flip_input=False,\n",
-    "    device='cpu',\n",
-    ")\n",
-    "\n",
+    "    def __init__(self, face_detection: list, multiplier: float):\n",
+    "        w_1 = face_detection[0]\n",
+    "        h_1 = face_detection[1]\n",
+    "        w_2 = face_detection[2]\n",
+    "        h_2 = face_detection[3]\n",
+    "                \n",
+    "        height = h_2 - h_1\n",
+    "        width = w_2 - w_1\n",
+    "        height_center = h_2 - (h_2 - h_1)/2\n",
+    "        width_center = w_2 - (w_2 - w_1)/2\n",
+    "        if width > height:\n",
+    "            self.side_length = width * multiplier\n",
+    "        else:\n",
+    "            self.side_length = height * multiplier\n",
+    "        self.confidence = face_detection[4]\n",
+    "        self.h_1 = math.floor(height_center - self.side_length/2)\n",
+    "        self.h_2 = math.ceil(height_center + self.side_length/2)\n",
+    "        self.w_1 = math.floor(width_center - self.side_length/2)\n",
+    "        self.w_2 = math.ceil(width_center + self.side_length/2)\n",
+    "        \n",
     "@dataclass\n",
     "class Predtype:\n",
     "    list_slice: slice\n",
@@ -70,10 +107,98 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "img_preds = fa.get_landmarks_from_directory(str(test_dir))"
+    "fa = face_alignment.FaceAlignment(\n",
+    "    face_alignment.LandmarksType._3D,\n",
+    "    # face_alignment.LandmarksType._2D,\n",
+    "    face_detector='sfd',\n",
+    "    # face_detector='blazeface',\n",
+    "    flip_input=False,\n",
+    "    device='cpu',\n",
+    "    verbose=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "sfd_resize_p = 480\n",
+    "\n",
+    "df_as_list_of_dicts = []\n",
+    "for image_dir in TEST_DIR.iterdir():\n",
+    "    print(\"----- Processing images in {}\".format(image_dir))\n",
+    "    files = list(image_dir.iterdir())\n",
+    "    f_i = 0\n",
+    "    f_n = len(files)\n",
+    "    for f in files:\n",
+    "        # somehow check if directory has already been processed\n",
+    "        if(False):\n",
+    "            print(\"!!!!! Directory already processed\")\n",
+    "            break\n",
+    "        if f.suffix in ['.jpg', '.png', '.jfif']:\n",
+    "            f_i += 1\n",
+    "            print(\"--- Processing {}/{}, {}\".format(\n",
+    "                f_i,\n",
+    "                f_n,\n",
+    "                f.name\n",
+    "            ))\n",
+    "            img = io.imread(f)\n",
+    "\n",
+    "            # standard format is (WIDTH x HEIGHT)\n",
+    "            # but img.shape returns it in opposite order\n",
+    "            height, width, _ = img.shape\n",
+    "            \n",
+    "            if height > width:\n",
+    "                # Vertical image\n",
+    "                multiplication_factor = sfd_resize_p/width\n",
+    "                dim = (sfd_resize_p, int(height*multiplication_factor))\n",
+    "            else:\n",
+    "                # Horizontal image\n",
+    "                multiplication_factor = sfd_resize_p/height\n",
+    "                dim = (int(width*multiplication_factor), sfd_resize_p)\n",
+    "\n",
+    "            resized_img = cv2.resize(img, dim, interpolation=cv2.INTER_AREA)\n",
+    "            landmarks, detections = fa.get_landmarks_from_image(resized_img)\n",
+    "            if landmarks is None and detections is None:\n",
+    "                continue\n",
+    "\n",
+    "\n",
+    "\n",
+    "            print(\"--- {} faces detected\".format(len(detections)))\n",
+    "            # for detection in detections:\n",
+    "            for index, detection in enumerate(detections):\n",
+    "                print(\"- Confidence: {}\".format(detection[4]))\n",
+    "\n",
+    "                # detection[0] = detection[0]/multiplication_factor\n",
+    "                # detection[1] = detection[1]/multiplication_factor\n",
+    "                # detection[2] = detection[2]/multiplication_factor\n",
+    "                # detection[3] = detection[3]/multiplication_factor\n",
+    "\n",
+    "\n",
+    "                df_as_list_of_dicts.append({\n",
+    "                    'img_path': f,\n",
+    "                    'detection': np.array(detection)/multiplication_factor,\n",
+    "                    'landmarks': np.array(landmarks[index])/multiplication_factor,\n",
+    "                })\n",
+    "                # df_as_list_of_dicts.append({\n",
+    "                #     'img_path': f,\n",
+    "                #     'fd_y1': detection[0],\n",
+    "                #     'fd_x1': detection[1],\n",
+    "                #     'fd_y2': detection[2],\n",
+    "                #     'fd_x2': detection[3],\n",
+    "                #     'confidence': detection[4],\n",
+    "                #     'landmarks': landmarks[index],\n",
+    "                # })\n",
+    "df = pd.DataFrame.from_dict(df_as_list_of_dicts)"
    ]
   },
   {
@@ -82,106 +207,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2D-Plot\n",
+    "# df[\"landmarks\"][0]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "img_path = None\n",
     "plot_style = dict(\n",
     "    marker='.',\n",
     "    markersize=1,\n",
     "    linestyle='none',\n",
     "    # linewidth=2,\n",
     ")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for img_path, faces in img_preds.items():\n",
-    "    # print(img_path)\n",
-    "    # print(len(value))\n",
-    "    # print(\"\\n\")\n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_axes([0, 0, 1, 1])\n",
-    "    ax.imshow(io.imread(img_path))\n",
-    "    ax.axis('off')\n",
-    "    for index, face in enumerate(faces):\n",
-    "        # ax = fig.add_subplot(1, len(faces), index + 1)\n",
-    "        for pred_type in pred_types.values():\n",
-    "            # print(pred)\n",
-    "            # print(type(pred))\n",
-    "            \n",
-    "            ax.plot(\n",
-    "                face[pred_type.list_slice, 0],\n",
-    "                face[pred_type.list_slice, 1],\n",
-    "                color=pred_type.color,\n",
-    "                **plot_style,\n",
-    "            )\n",
     "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 3D-Plot\n",
+    "# Analyze images in dataframe\n",
+    "for index, row in df.iterrows():\n",
+    "    detection = FaceDetection(row['detection'], multiplier=1.25)\n",
     "\n",
-    "for img_path, faces in img_preds.items():\n",
-    "    # print(img_path)\n",
-    "    # print(len(value))\n",
-    "    # print(\"\\n\")\n",
     "\n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_axes([0, 0, 1, 1], projection='3d')\n",
-    "    # ax.imshow(io.imread(img_path))\n",
+    "    # Draw image if looking at a different image (or first image) than the last image\n",
+    "    if img_path is None or img_path != row['img_path']:\n",
+    "        img_path = row['img_path']\n",
+    "        fig = plt.figure()\n",
+    "        ax = fig.add_axes([0, 0, 1, 1])\n",
+    "        ax.imshow(io.imread(img_path))\n",
+    "        ax.axis('off')\n",
+    "        print(\"Confidence: {}\".format(detection.confidence))\n",
+    "\n",
+    "    # Draw bounding box\n",
+    "    rect = patches.Rectangle(\n",
+    "        (detection.w_1, detection.h_1),\n",
+    "        detection.side_length,\n",
+    "        detection.side_length,\n",
+    "        linewidth=1,\n",
+    "        edgecolor='g',\n",
+    "        facecolor='none',\n",
+    "    )\n",
+    "    ax.add_patch(rect)\n",
+    "    plt.plot(detection.w_1, detection.h_1, 'ro')\n",
+    "    plt.plot(detection.w_1, detection.h_2, 'go')\n",
+    "    plt.plot(detection.w_2, detection.h_1, 'bo')\n",
+    "    plt.plot(detection.w_2, detection.h_2, 'yo')\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # Draw 2D landmarks\n",
+    "\n",
+    "# for img_path, faces in img_preds.items():\n",
+    "#     # print(img_path)\n",
+    "#     # print(len(value))\n",
+    "#     # print(\"\\n\")\n",
+    "#     fig = plt.figure()\n",
+    "#     ax = fig.add_axes([0, 0, 1, 1])\n",
+    "#     ax.imshow(io.imread(img_path))\n",
     "    # ax.axis('off')\n",
-    "    for index, face in enumerate(faces):\n",
-    "        # ax = fig.add_subplot(1, len(faces), index + 1)\n",
-    "        surf = ax.scatter(\n",
-    "            face[:, 0] * 1.2,\n",
-    "            face[:, 1],\n",
-    "            face[:, 2],\n",
-    "            c='cyan',\n",
-    "            alpha=1.0,\n",
-    "            edgecolor='b',\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # for index, landmark in enumerate(row['landmarks']):\n",
+    "    # landmark = \n",
+    "    # print(landmark)\n",
+    "    # ax = fig.add_subplot(1, len(faces), index + 1)\n",
+    "    for pred_type in pred_types.values():\n",
+    "        # print(pred)\n",
+    "        # print(type(pred))\n",
+    "        \n",
+    "        ax.plot(\n",
+    "            row['landmarks'][pred_type.list_slice, 0],\n",
+    "            row['landmarks'][pred_type.list_slice, 1],\n",
+    "            color=pred_type.color,\n",
+    "            **plot_style,\n",
     "        )\n",
-    "        for pred_type in pred_types.values():\n",
-    "            # print(pred)\n",
-    "            # print(type(pred))\n",
-    "            ax.plot3D(\n",
-    "                face[pred_type.list_slice, 0] * 1.2,\n",
-    "                face[pred_type.list_slice, 1],\n",
-    "                face[pred_type.list_slice, 2],\n",
-    "                color='blue',\n",
-    "            )\n",
-    "        ax.view_init(elev=45., azim=45.)\n",
-    "        ax.set_xlim(ax.get_xlim()[::-1])\n",
-    "        plt.show()\n",
     "\n",
-    "\n",
-    "\n",
-    "# ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
-    "# surf = ax.scatter(face[:, 0] * 1.2,\n",
-    "#                   face[:, 1],\n",
-    "#                   face[:, 2],\n",
-    "#                   c='cyan',\n",
-    "#                   alpha=1.0,\n",
-    "#                   edgecolor='b',\n",
-    "# )\n",
-    "\n",
-    "\n",
-    "# for pred_type in pred_types.values():\n",
-    "#     ax.plot3D(face[pred_type.slice, 0] * 1.2,\n",
-    "#               face[pred_type.slice, 1],\n",
-    "#               face[pred_type.slice, 2], color='blue')\n",
-    "\n",
-    "# ax.view_init(elev=90., azim=90.)\n",
-    "# ax.set_xlim(ax.get_xlim()[::-1])\n",
-    "# plt.show()"
+    "        \n",
+    "        \n"
    ]
   },
   {
@@ -190,67 +296,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# OLD BOUNDING BOX THINGS\n",
-    "images_list = []\n",
+    "img = io.imread(img_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vggface = VGGFace(\n",
+    "    # model='resnet50',\n",
+    "    model='senet50',\n",
+    "    include_top=False,\n",
+    "    input_shape=(224, 224, 3),\n",
+    "    pooling='avg',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "vgg_resize_p = 224\n",
+    "column_as_list_of_dicts = []\n",
+    "for index, row in df.iterrows():\n",
+    "    \n",
+    "    img = io.imread(row['img_path'])\n",
     "\n",
-    "embeddings_list = []\n",
-    "# index = 0\n",
-    "for image_path in test_dir.iterdir():\n",
-    "    image_dict = {\n",
-    "        'path': image_path,\n",
-    "        'face_list': [],\n",
-    "    }\n",
-    "#     print(image_path)\n",
-    "    # index += 1\n",
-    "    image = cv2.imread(str(image_path))\n",
-    "#     print(image.shape)\n",
+    "\n",
+    "    # fig = plt.figure()\n",
+    "    # ax = fig.add_axes([0, 0, 1, 1])\n",
+    "    # ax.imshow(img)\n",
+    "    # ax.axis('off')\n",
     "    \n",
-    "    faces = mtcnn_face_detector.detect_faces(image)\n",
-    "#     print(len(faces))\n",
-    "    face_index = 0\n",
-    "    for face_dict in faces:\n",
-    "        \n",
-    "        \n",
-    "        face_index += 1\n",
-    "        confidence = face_dict['confidence']\n",
-    "#         print(confidence)\n",
-    "        if confidence < 0.5:\n",
-    "            continue\n",
-    "        (x, y, width, height) = face_dict['box']\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        # Get face image from bounding box and preprocess\n",
-    "        face_image = image[y:y + height, x:x + width]\n",
-    "        face_image = cv2.resize(face_image, (224, 224))\n",
-    "        face_image_window = '{}'.format(face_index)\n",
-    "        cv2.imshow(face_image_window, face_image)\n",
-    "        cv2.moveWindow(face_image_window, 224*(face_index - 1), 0)\n",
-    "        \n",
-    "        # Draw bounding box\n",
-    "        image = cv2.rectangle(\n",
-    "            image,\n",
-    "            (x, y),\n",
-    "            (x + width, y + height),\n",
-    "            (0, 255, 0),\n",
-    "            2,\n",
-    "        )\n",
-    "        \n",
-    "        samples = preprocess_input(np.expand_dims(face_image.astype('float32'), axis=0), version=2)\n",
-    "        embedding = vgg_embedding_extractor.predict(samples)\n",
-    "        \n",
-    "        face_data_dict = {\n",
-    "            'source_image_path': image_path,\n",
-    "            'mtcnn_extraction': face_dict,\n",
-    "            'vgg_extraction': embedding,\n",
-    "        }\n",
-    "        image_dict['face_list'].append(face_data_dict)\n",
-    "    images_list.append(image_dict)\n",
-    "    cv2.imshow('test image', image)\n",
-    "    cv2.moveWindow('test image', 0, 224)\n",
-    "    cv2.waitKey(0)\n",
-    "    cv2.destroyAllWindows()\n",
+    "\n",
+    "    detection = FaceDetection(row['detection'], multiplier=1.25)\n",
+    "    # print(img.shape)\n",
+    "    # print(detection.h_1, detection.w_1)\n",
+    "    # print(detection.h_2, detection.w_2)\n",
+    "    # print(detection.side_length)\n",
+    "\n",
+    "    face_img = img[\n",
+    "        detection.h_1:detection.h_2,\n",
+    "        detection.w_1:detection.w_2,\n",
+    "    ]\n",
+    "    # print(face_img.shape)\n",
     "    \n",
+    "    \n",
+    "    if detection.side_length > vgg_resize_p:\n",
+    "        interp_method = cv2.INTER_AREA\n",
+    "    else:\n",
+    "        interp_method = cv2.INTER_CUBIC\n",
+    "    face_img = cv2.resize(face_img, (vgg_resize_p, vgg_resize_p), interpolation=interp_method)\n",
+    "\n",
+    "\n",
+    "    # fig = plt.figure()\n",
+    "    # ax = fig.add_axes([0, 0, 1, 1])\n",
+    "    # ax.imshow(face_img)\n",
+    "    # ax.axis('off')\n",
+    "    \n",
+    "\n",
+    "    samples = preprocess_input(np.expand_dims(face_img.astype('float32'), axis=0), version=2)\n",
+    "    embedding = vggface.predict(samples)\n",
+    "    column_as_list_of_dicts.append({\n",
+    "        \"embedding\": embedding\n",
+    "    })\n",
+    "\n",
+    "\n",
+    "    # add code to save stuff\n",
+    "    # add code from extra_code to check bbox off image edges\n",
+    "        \n",
+    "\n",
+    "\n",
     "    \n",
     "    \n",
     "\n"
@@ -262,23 +384,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(test_dir.joinpath(test_dir.name + '.pkl'), 'wb') as save_path:\n",
-    "    pickle.dump(images_list, save_path)\n",
-    "    \n",
-    "    \n",
-    "# np.linalg.norm(embeddings_list[0] - embeddings_list[0], ord=2)\n",
-    "# cosine(embeddings_list[6], embeddings_list[7])\n",
     "\n",
-    "# with open(test_dir.joinpath(test_dir.name + '.pkl'), 'rb') as load_path:\n",
-    "#     asdf = pickle.load(load_path)"
+    "sum(column_as_list_of_dicts[4]['embedding'][0])\n",
+    "# type(column_as_list_of_dicts[0]['embedding'][0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
