--- a/face_alignment.ipynb
+++ b/face_alignment.ipynb
@@ -12,7 +12,6 @@
     "from dataclasses import dataclass\n",
     "import math\n",
     "\n",
-    "import face_alignment\n",
     "from skimage import io\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,7 +22,9 @@
     "from keras_vggface.vggface import VGGFace\n",
     "from keras_vggface.utils import preprocess_input\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "# Import face_alignment last due to a weird OpenMP error\n",
+    "import face_alignment\n"
    ]
   },
   {
@@ -112,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "fa = face_alignment.FaceAlignment(\n",
+    "facealignment_model = face_alignment.FaceAlignment(\n",
     "    face_alignment.LandmarksType._3D,\n",
     "    # face_alignment.LandmarksType._2D,\n",
     "    face_detector='sfd',\n",
@@ -131,8 +132,89 @@
    },
    "outputs": [],
    "source": [
-    "sfd_resize_p = 480\n",
+    "vggface_model = VGGFace(\n",
+    "    # model='resnet50',\n",
+    "    model='senet50',\n",
+    "    include_top=False,\n",
+    "    input_shape=(224, 224, 3),\n",
+    "    pooling='avg',\n",
+    ")\n",
+    "print('Inputs: %s' % vggface_model.inputs)\n",
+    "print('Outputs: %s' % vggface_model.outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rescale_detection(detection: list, multiplication_factor: float) -> list:\n",
+    "    if len(detection) != 5:\n",
+    "        print(\"Can't rescale a detection that has more than 4+1 items!\")\n",
+    "        return detection\n",
+    "    detection[0] = detection[0]/multiplication_factor\n",
+    "    detection[1] = detection[1]/multiplication_factor\n",
+    "    detection[2] = detection[2]/multiplication_factor\n",
+    "    detection[3] = detection[3]/multiplication_factor\n",
+    "    return detection\n",
+    "def rescale_landmark(landmark: list, multiplication_factor: float) -> list:\n",
+    "    return np.array(landmark)/multiplication_factor\n",
+    "def get_landmarks_and_detection(facealignment_model: face_alignment.FaceAlignment, img: np.ndarray, sfd_resize_p=480):\n",
+    "    # standard format is (WIDTH x HEIGHT)\n",
+    "    # but img.shape returns it in opposite order\n",
+    "    height, width, _ = img.shape\n",
+    "    if height > width:\n",
+    "        # Vertical image\n",
+    "        multiplication_factor = sfd_resize_p/width\n",
+    "        dim = (sfd_resize_p, int(height*multiplication_factor))\n",
+    "    else:\n",
+    "        # Horizontal image\n",
+    "        multiplication_factor = sfd_resize_p/height\n",
+    "        dim = (int(width*multiplication_factor), sfd_resize_p)\n",
+    "    resized_img = cv2.resize(img, dim, interpolation=cv2.INTER_AREA)\n",
+    "    # Get lists of landmarks and detections, which are both lists of coordinates\n",
+    "    landmarks, detections = facealignment_model.get_landmarks_from_image(resized_img)\n",
+    "    if landmarks is None and detections is None:\n",
+    "        return None, None\n",
+    "    rescaled_landmarks = [rescale_landmark(landmark, multiplication_factor) for landmark in landmarks]\n",
+    "    rescaled_detections = [rescale_detection(detection, multiplication_factor) for detection in detections]    \n",
+    "    return rescaled_landmarks, rescaled_detections\n",
+    "def get_embeddings(vggface_model: VGGFace, img: np.ndarray, detections: list, vgg_resize_p=224, show_input_face=False):\n",
+    "    embeddings = []\n",
+    "    for index, detection in enumerate(detections):\n",
+    "        detection_obj = FaceDetection(detection, multiplier=1.2)\n",
+    "        print(\"- Confidence: {}\".format(round(detection_obj.confidence, 3)))\n",
+    "        face_img = img[\n",
+    "            detection_obj.h_1:detection_obj.h_2,\n",
+    "            detection_obj.w_1:detection_obj.w_2,\n",
+    "        ]\n",
     "\n",
+    "        if detection_obj.side_length > vgg_resize_p:\n",
+    "            interp_method = cv2.INTER_AREA\n",
+    "        else:\n",
+    "            interp_method = cv2.INTER_CUBIC\n",
+    "        face_img = cv2.resize(face_img, (vgg_resize_p, vgg_resize_p), interpolation=interp_method)\n",
+    "\n",
+    "        if show_input_face:\n",
+    "            fig = plt.figure()\n",
+    "            ax = fig.add_axes([0, 0, 1, 1])\n",
+    "            ax.imshow(face_img)\n",
+    "            ax.axis('off')\n",
+    "\n",
+    "        samples = preprocess_input(np.expand_dims(face_img.astype('float32'), axis=0), version=2)\n",
+    "        embeddings.append(vggface_model.predict(samples))\n",
+    "    return embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "df_as_list_of_dicts = []\n",
     "for image_dir in TEST_DIR.iterdir():\n",
     "    print(\"----- Processing images in {}\".format(image_dir))\n",
@@ -144,7 +226,9 @@
     "        if(False):\n",
     "            print(\"!!!!! Directory already processed\")\n",
     "            break\n",
-    "        if f.suffix in ['.jpg', '.png', '.jfif']:\n",
+    "        if f.suffix not in ['.jpg', '.png', '.jfif']:\n",
+    "            print(\"!!!!! Not an image: {}\".format(f))\n",
+    "        else:\n",
     "            f_i += 1\n",
     "            print(\"--- Processing {}/{}, {}\".format(\n",
     "                f_i,\n",
@@ -152,52 +236,20 @@
     "                f.name\n",
     "            ))\n",
     "            img = io.imread(f)\n",
-    "\n",
-    "            # standard format is (WIDTH x HEIGHT)\n",
-    "            # but img.shape returns it in opposite order\n",
-    "            height, width, _ = img.shape\n",
-    "            \n",
-    "            if height > width:\n",
-    "                # Vertical image\n",
-    "                multiplication_factor = sfd_resize_p/width\n",
-    "                dim = (sfd_resize_p, int(height*multiplication_factor))\n",
-    "            else:\n",
-    "                # Horizontal image\n",
-    "                multiplication_factor = sfd_resize_p/height\n",
-    "                dim = (int(width*multiplication_factor), sfd_resize_p)\n",
-    "\n",
-    "            resized_img = cv2.resize(img, dim, interpolation=cv2.INTER_AREA)\n",
-    "            landmarks, detections = fa.get_landmarks_from_image(resized_img)\n",
+    "            landmarks, detections = get_landmarks_and_detection(facealignment_model, img)\n",
     "            if landmarks is None and detections is None:\n",
+    "                print(\"--- 0 faces detected, continuing to next image\")\n",
     "                continue\n",
-    "\n",
-    "\n",
-    "\n",
     "            print(\"--- {} faces detected\".format(len(detections)))\n",
-    "            # for detection in detections:\n",
-    "            for index, detection in enumerate(detections):\n",
-    "                print(\"- Confidence: {}\".format(detection[4]))\n",
-    "\n",
-    "                # detection[0] = detection[0]/multiplication_factor\n",
-    "                # detection[1] = detection[1]/multiplication_factor\n",
-    "                # detection[2] = detection[2]/multiplication_factor\n",
-    "                # detection[3] = detection[3]/multiplication_factor\n",
-    "\n",
-    "\n",
+    "            embeddings = get_embeddings(vggface_model, img, detections)\n",
+    "            for index, embedding in enumerate(embeddings):\n",
     "                df_as_list_of_dicts.append({\n",
-    "                    'img_path': f,\n",
-    "                    'detection': np.array(detection)/multiplication_factor,\n",
-    "                    'landmarks': np.array(landmarks[index])/multiplication_factor,\n",
+    "                    'img_path': str(f),\n",
+    "                    'detection': detections[index],\n",
+    "                    'landmarks': landmarks[index],\n",
+    "                    'embedding': embedding\n",
     "                })\n",
-    "                # df_as_list_of_dicts.append({\n",
-    "                #     'img_path': f,\n",
-    "                #     'fd_y1': detection[0],\n",
-    "                #     'fd_x1': detection[1],\n",
-    "                #     'fd_y2': detection[2],\n",
-    "                #     'fd_x2': detection[3],\n",
-    "                #     'confidence': detection[4],\n",
-    "                #     'landmarks': landmarks[index],\n",
-    "                # })\n",
+    "\n",
     "df = pd.DataFrame.from_dict(df_as_list_of_dicts)"
    ]
   },
@@ -207,8 +259,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df[\"landmarks\"][0]\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for index, row in df.iterrows():\n",
+    "    print(type(row['embedding'][0]))\n",
+    "    # print(row['embedding'][0].shape)\n",
+    "# type(column_as_list_of_dicts[0]['embedding'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_pickle(DUMP_DIR / \"test_dataframe.pickle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = pd.read_pickle(DUMP_DIR / \"test_dataframe.pickle\")"
    ]
   },
   {
@@ -293,79 +376,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = io.imread(img_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vggface = VGGFace(\n",
-    "    # model='resnet50',\n",
-    "    model='senet50',\n",
-    "    include_top=False,\n",
-    "    input_shape=(224, 224, 3),\n",
-    "    pooling='avg',\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "vgg_resize_p = 224\n",
-    "column_as_list_of_dicts = []\n",
     "for index, row in df.iterrows():\n",
-    "    \n",
     "    img = io.imread(row['img_path'])\n",
-    "\n",
-    "\n",
-    "    # fig = plt.figure()\n",
-    "    # ax = fig.add_axes([0, 0, 1, 1])\n",
-    "    # ax.imshow(img)\n",
-    "    # ax.axis('off')\n",
-    "    \n",
-    "\n",
-    "    detection = FaceDetection(row['detection'], multiplier=1.25)\n",
-    "    # print(img.shape)\n",
-    "    # print(detection.h_1, detection.w_1)\n",
-    "    # print(detection.h_2, detection.w_2)\n",
-    "    # print(detection.side_length)\n",
-    "\n",
-    "    face_img = img[\n",
-    "        detection.h_1:detection.h_2,\n",
-    "        detection.w_1:detection.w_2,\n",
-    "    ]\n",
-    "    # print(face_img.shape)\n",
-    "    \n",
-    "    \n",
-    "    if detection.side_length > vgg_resize_p:\n",
-    "        interp_method = cv2.INTER_AREA\n",
-    "    else:\n",
-    "        interp_method = cv2.INTER_CUBIC\n",
-    "    face_img = cv2.resize(face_img, (vgg_resize_p, vgg_resize_p), interpolation=interp_method)\n",
-    "\n",
-    "\n",
-    "    # fig = plt.figure()\n",
-    "    # ax = fig.add_axes([0, 0, 1, 1])\n",
-    "    # ax.imshow(face_img)\n",
-    "    # ax.axis('off')\n",
-    "    \n",
-    "\n",
-    "    samples = preprocess_input(np.expand_dims(face_img.astype('float32'), axis=0), version=2)\n",
-    "    embedding = vggface.predict(samples)\n",
-    "    column_as_list_of_dicts.append({\n",
-    "        \"embedding\": embedding\n",
-    "    })\n",
+    "    detection = FaceDetection(row['detection'], multiplier=1.2)\n",
     "\n",
     "\n",
     "    # add code to save stuff\n",
@@ -376,17 +394,6 @@
     "    \n",
     "    \n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "sum(column_as_list_of_dicts[4]['embedding'][0])\n",
-    "# type(column_as_list_of_dicts[0]['embedding'][0])"
    ]
   }
  ],
